syntax = "proto3";

package pb;

// 定義一個驗證使用者的服務
service Auth {
	// Ping 測試服務連線
	rpc Ping(PingRequest) returns (PongResponse) {}
	// Register 註冊
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
	// Login 登入
	rpc Login(LoginRequest) returns (LoginResponse) {}
	// Check 確認是否登入
	rpc Check(CheckRequest) returns (CheckResponse) {}
	// Logout 登出
	rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message PingRequest{}
message PongResponse{
	string service_name = 1;
	string environment = 2;
}

// User 使用者資料
message User {
	int64 id = 1;
	string first_name = 2;
	string last_name = 3;
	string nickname = 4;
	string address = 5;
	string phone = 6;
	string email = 7;
	Sex sex = 8;
	string auth_token = 9;
}

// 性別群集
enum Sex {
	MALE = 0;
	FEMALE = 1;
}

// 註冊請求
message RegisterRequest {
	string first_name = 1;
	string last_name = 2;
	string nickname = 3;
	string password = 4;
	string phone = 5;
	string email = 6;
	string address = 7;
	Sex sex = 8;
}

// 回傳註冊狀態
message RegisterResponse {
	string error_code = 1;
	string error_text = 2;
	User user = 3;
}

// 登入方式群集
enum LoginMethod {
	PHONE = 0;
	EMAIL = 1;
}

// 登入請求
message LoginRequest {
	string login_data = 1;
	string password = 2;
	LoginMethod login_method = 3;
}

// 回傳登入狀態
message LoginResponse {
	string error_code = 1;
	string error_text = 2;
	bool login_check = 3;
	User user = 4;
}

// 確認登入請求
message CheckRequest {
	int64 user_id = 1;
	string auth_token = 2;
}

// 回傳登出狀態
message CheckResponse {
	string error_code = 1;
	string error_text = 2;
	User user = 3;
}

// 登出請求
message LogoutRequest {
	int64 user_id = 1;
	string auth_token = 2;
}

// 回傳登出狀態
message LogoutResponse {
	string error_code = 1;
	string error_text = 2;
}
